# bot3

./: .gitignore  CMakeLists.txt  README.md  build.sh  map_05.json  run.sh
app/genmap/: CMakeLists.txt  genmap_app.cpp  genmap_app.h  genmap_main.cpp
app/showmap/: CMakeLists.txt  showmap_app.cpp  showmap_app.h  showmap_main.cpp
botlib/: CMakeLists.txt  botlib.cmake
botlib/accessor/: botlib_add_object_checker.cpp  botlib_add_object_checker.h  botlib_game_map_accessor.h  botlib_game_object_flag_resetter.cpp  botlib_game_object_flag_resetter.h  botlib_game_object_jsonizer.cpp  botlib_game_object_jsonizer.h  botlib_game_object_presenter.cpp  botlib_game_object_presenter.h  botlib_game_object_remover.cpp  botlib_game_object_remover.h  botlib_game_object_updater.cpp  botlib_game_object_updater.h  botlib_missile_hit_checker.cpp  botlib_missile_hit_checker.h  botlib_nonpassthrough_collide_checker.cpp  botlib_nonpassthrough_collide_checker.h  botlib_passthrough_collide_checker.cpp  botlib_passthrough_collide_checker.h  botlib_place_in_map_checker.cpp  botlib_place_in_map_checker.h  botlib_robot_hit_missile_checker.cpp  botlib_robot_hit_missile_checker.h
botlib/ai/: botlib_ai.cpp  botlib_ai.h  botlib_ai_factory.cpp  botlib_ai_factory.h  botlib_ai_lib.cpp  botlib_ai_lib.h  botlib_chase_shoot_ai.cpp  botlib_chase_shoot_ai.h  botlib_chase_shoot_ai_param.cpp  botlib_chase_shoot_ai_param.h  botlib_robot_action.cpp  botlib_robot_action.h
botlib/app/: botlib_app_actions.h  botlib_app_config.cpp  botlib_app_config.h  botlib_app_launcher.cpp  botlib_app_launcher.h  botlib_bot_app.cpp  botlib_bot_app.h  botlib_gen_map_app.cpp  botlib_gen_map_app.h  botlib_run_game_app.cpp  botlib_run_game_app.h  botlib_show_map_app.cpp  botlib_show_map_app.h  botlib_test_direction_pie_app.cpp  botlib_test_direction_pie_app.h  botlib_test_game_buttons_app.cpp  botlib_test_game_buttons_app.h  botlib_test_game_navigator_app.cpp  botlib_test_game_navigator_app.h  botlib_test_map_app.cpp  botlib_test_map_app.h  botlib_test_particle_app.cpp  botlib_test_particle_app.h  botlib_test_shape_app.cpp  botlib_test_shape_app.h  botlib_test_widget_app.cpp  botlib_test_widget_app.h  botlib_testmap_app.cpp  botlib_testmap_app.h  botlib_testshape_app.cpp  botlib_testshape_app.h  botlib_testwidget_app.cpp  botlib_testwidget_app.h
botlib/game_widgets/: botlib_hp_indicator.cpp  botlib_hp_indicator.h  botlib_hp_indicator_config.cpp  botlib_hp_indicator_config.h  botlib_icon.cpp  botlib_icon.h  botlib_icon_template.cpp  botlib_icon_template.h  botlib_progress_bar.cpp  botlib_progress_bar.h  botlib_progress_bar_template.cpp  botlib_progress_bar_template.h  botlib_progress_pie.cpp  botlib_progress_pie.h  botlib_progress_pie_template.cpp  botlib_progress_pie_template.h
botlib/gameobj/: botlib_ai_robot.cpp  botlib_ai_robot.h  botlib_ai_robot_template.cpp  botlib_ai_robot_template.h  botlib_component.cpp  botlib_component.h  botlib_component_template.cpp  botlib_component_template.h  botlib_component_type.cpp  botlib_component_type.h  botlib_composite_object.cpp  botlib_composite_object.h  botlib_composite_object_template.cpp  botlib_composite_object_template.h  botlib_game_obj_flag.cpp  botlib_game_obj_flag.h  botlib_game_object.cpp  botlib_game_object.h  botlib_game_object_factory.cpp  botlib_game_object_factory.h  botlib_game_object_item.cpp  botlib_game_object_item.h  botlib_game_object_state.cpp  botlib_game_object_state.h  botlib_game_object_template.cpp  botlib_game_object_template.h  botlib_game_object_type.cpp  botlib_game_object_type.h  botlib_goodie.cpp  botlib_goodie.h  botlib_goodie_action.cpp  botlib_goodie_action.h  botlib_goodie_effect.cpp  botlib_goodie_effect.h  botlib_goodie_template.cpp  botlib_goodie_template.h  botlib_goodie_type.cpp  botlib_goodie_type.h  botlib_hp_indicator.cpp  botlib_hp_indicator.h  (+33 more)
botlib/gameutils/: botlib_context.cpp  botlib_context.h  botlib_game_config.cpp  botlib_game_config.h  botlib_game_lib.cpp  botlib_game_lib.h  botlib_game_map.cpp  botlib_game_map.h  botlib_game_map_loader.cpp  botlib_game_map_loader.h  botlib_game_object_dumper.cpp  botlib_game_object_dumper.h  botlib_game_utils.cpp  botlib_game_utils.h  botlib_goodie_generator.cpp  botlib_goodie_generator.h  botlib_input_map.h  botlib_time_delta_smoother.cpp  botlib_time_delta_smoother.h  botlib_update_context.cpp  botlib_update_context.h
botlib/include/: botlib_add_object_checker.h  botlib_ai_robot.h  botlib_ai_robot_template.h  botlib_ai_robot_template_parser.h  botlib_align.h  botlib_app_action.h  botlib_app_config.h  botlib_bot_app.h  botlib_button.h  botlib_button_config.h  botlib_collide.h  botlib_collide_robot_tile_checker.h  botlib_component.h  botlib_component_parser.h  botlib_component_template.h  botlib_component_template_parser.h  botlib_composite_object.h  botlib_composite_object_template.h  botlib_composite_object_template_parser.h  botlib_constants.h  botlib_dead_object_remover.h  botlib_game_lib.h  botlib_game_map.h  botlib_game_map_accessor.h  botlib_game_map_item.h  botlib_game_map_loader.h  botlib_game_object.h  botlib_game_object_flag_resetter.h  botlib_game_object_presenter.h  botlib_game_object_template.h  botlib_game_object_template_parser.h  botlib_game_object_type.h  botlib_game_object_updater.h  botlib_game_screen.h  botlib_game_utils.h  botlib_graphics.h  botlib_hp_indicator.h  botlib_label.h  botlib_lib_parser.h  botlib_message_box.h  (+36 more)
botlib/map_accessor/: botlib_game_obj_chooser.cpp  botlib_game_obj_chooser.h  botlib_game_obj_flag_resetter.cpp  botlib_game_obj_flag_resetter.h  botlib_game_obj_updater.cpp  botlib_game_obj_updater.h  botlib_missile_hit_checker.cpp  botlib_missile_hit_checker.h  botlib_passthrough_collide_checker.cpp  botlib_passthrough_collide_checker.h  botlib_target_finder.cpp  botlib_target_finder.h
botlib/map_generator/: .botlib_game_map_generator.cpp.swp  botlib_game_map_generator.cpp  botlib_game_map_generator.h  (+8 more)
common/: CMakeLists.txt
commonlib/: CMakeLists.txt  commonlib.cmake
desktop/: CMakeLists.txt  build.sh
main/: CMakeLists.txt  bot_main.cpp
(+677 files in other folders)
